[tool.poetry]
name = "comfyui-ttutils"
version = "0.1.0"
description = ""
authors = ["tickten <tickten@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
novelai-api = "^0.26.0"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
